--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0",
+  "version": "1.4.4",
   "keywords": [],
   "type": "commonjs",
   "exports": {
@@ -51,10 +51,9 @@
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "@strapi/design-system": "^2.0.0",
-    "@strapi/icons": "^2.0.0",
+    "@strapi/design-system": "2.0.0-rc.30",
+    "@strapi/icons": "2.0.0-rc.30",
     "@strapi/strapi": "^5.12.5",
-    "prismjs": "1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intl": "^7.1.10",
@@ -70,7 +69,7 @@
     "displayName": "Rich Text Blocks (Extended Version)",
     "description": "An extended version of the JSON based native strapi field \"Rich Text (Blocks)\""
   },
-  "name": "strapi-plugin-rich-text-blocks-extended",
+  "name": "@crispyyv/strapi-plugin-rich-text-blocks-extended",
   "description": "An extended version of the JSON based native strapi field \"Rich Text (Blocks)\"",
   "license": "MIT",
   "author": "Jorge Pizzati <jorge.pizzati@uvltd.tech>"
